--- a/wifi-led/src/index.html
+++ b/wifi-led/src/index.html
@@ -69,7 +69,7 @@
 
     <script>
         function sendRequest(is_on) {
-            const url = 'http:///192.168.0.50/led'; // Replace with STATIC IP of ESP32
+            const url = 'http://192.168.0.50/led'; // Replace with STATIC IP of ESP32
 
             fetch(url, {
                 method: 'POST',
